--- a/sass/style.scss
+++ b/sass/style.scss
@@ -27,6 +27,7 @@ body {
     p {
       font-size: 120%;
       line-height: 1.3;
+      width: 100%;
       code {
         font-size: smaller;
       }
